RESOLVED FIXED138513
Null deref performing Lookup on Apple Trailers full screen button
https://bugs.webkit.org/show_bug.cgi?id=138513
Summary Null deref performing Lookup on Apple Trailers full screen button
Beth Dakin
Reported 2014-11-07 12:32:45 PST
Null deref performing Lookup on Apple Trailers full screen button rdar://problem/18909699
Attachments
Patch (1.40 KB, patch)
2014-11-07 12:34 PST, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2014-11-07 12:34:42 PST
Beth Dakin
Comment 2 2014-11-07 13:30:11 PST
Note You need to log in before you can comment on or make changes to this bug.