Null deref performing Lookup on Apple Trailers full screen button https://bugs.webkit.org/show_bug.cgi?id=138513 -and corresponding- rdar://problem/18909699

Reviewed by Tim Horton.

* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::performDictionaryLookupForSelection):



Canonical link: https://commits.webkit.org/156341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175761 268f45cc-cd09-0410-ab3c-d52691b4dbfc